# src/swagger/openapi.yaml
@@ -52,7 +52,23 @@ components:
         createAt:
           type: string
           format: date
-          
+
+    Comment:
+      properties:
+        postId:
+          type: integer
+          format: int64
+        depth:
+          type: integer
+          format: int64
+        parentId:
+          type: integer
+          format: int64
+        author:
+          type: string
+        text:
+          type: string
+
   requestBodies:
     createPost:
       content:
@@ -84,7 +100,7 @@ components:
             $ref: "#/components/schemas/User"
       description: request data to create user
       required: true
-      
+
     loginUser:
       content:
         application/json:
@@ -92,6 +108,15 @@ components:
             $ref: "#/components/schemas/User"
       description: request data for user login
       required: true
+
+    createComment:
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/Comment"
+      description: request data for create comment
+      required: true
+
 
 paths:
   /page:
@@ -123,8 +148,7 @@ paths:
                 $ref: "#/components/schemas/Page"
         "404":
           description: Page not found
-     
-          
+
   /post:
     get:
       summary: 게시글을 반환합니다.
@@ -134,7 +158,7 @@ paths:
         - name: id
           in: query
           schema:
-            type: string
+            type: integer
             format: int64
           example: 1
           required: true
@@ -162,9 +186,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/Post"
         "404":
-          description: UserId not found 
+          description: UserId not found
         "401":
-          description: jwt must be provided 
+          description: jwt must be provided
 
     patch:
       summary: 게시글을 수정합니다.
@@ -174,7 +198,8 @@ paths:
         - name: id
           in: query
           schema:
-            type: string
+            type: integer
+            format: int64
           example: 1
           required: true
       requestBody:
@@ -187,9 +212,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/Post"
         "404":
-          description: Post not found 
+          description: Post not found
         "401":
-          description: jwt must be provided 
+          description: jwt must be provided
         "403":
           description: You don't have edit permission
 
@@ -202,19 +227,27 @@ paths:
         - name: id
           in: query
           schema:
-            type: string
+            type: integer
+            format: int64
           example: 1
           required: true
       responses:
         "200":
           description: 게시글 삭제 성공
         "401":
-          description: jwt must be provided 
+          description: jwt must be provided
         "404":
           description: Post not found
         "403":
           description: You don't have edit permission
 
+  /comment:
+    post:
+      summary: 댓글 생성합니다.
+      tags:
+        - comment
+      requestBody:
+        $ref: "#/components/requestBodies/createComment"
 
   /auth/signup:
     post:
@@ -228,8 +261,7 @@ paths:
           description: OK
         "404":
           description: email already exist
-  
-  
+
   /auth/login:
     post:
       summary: 로그인합니다.
@@ -269,7 +301,7 @@ paths:
         "400":
           description: Access token is not expired!
         "403":
-           description: Access token and refresh token are need for refresh!
+          description: Access token and refresh token are need for refresh!
         "401":
           description: No authorized
         "404":
